--- a/about.html
+++ b/about.html
@@ -299,18 +299,14 @@
     <!-- End brands Area -->
 
     <!-- start footer Area -->
-	<div align="center">
-		<p class="footer-text">
-		  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		  Copyright &copy;<script>
-			document.write(new Date().getFullYear());
-		  </script>
-		  All rights reserved | This template is made with
-		  <i class="fa fa-heart-o" aria-hidden="true"></i> by
-		  <a href="https://colorlib.com" target="_blank">Farhan</a>
-		  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		</p>
-	  </div>
+    <div align="center">
+      <p class="footer-text">
+        Copyright &copy;<script>
+          document.write(new Date().getFullYear());
+        </script>
+        All rights reserved | Farhan Nazir
+      </p>
+    </div>
     <!-- End footer Area -->
 
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
