--- a/portfolio.html
+++ b/portfolio.html
@@ -87,6 +87,30 @@
               <div class="relative">
                 <div class="thumb">
                   <div class="overlay overlay-bg"></div>
+                  <img class="image img-fluid" src="img/p5.jpg" alt="" />
+                </div>
+                <a
+                  href="https://farhan-nazir.github.io/Pig-Game/"
+                  class="img-pop-up"
+                >
+                  <div class="middle">
+                    <div class="text align-self-center d-flex">
+                      <img src="img/preview.png" alt="" />
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="p-inner">
+                <h4>Pig Game</h4>
+                <div class="cat">JavaScript - HTML5 - CSS3</div>
+                Source code:
+                <a href="https://github.com/Farhan-Nazir/Pig-Game">Pig Game</a>
+              </div>
+            </div>
+            <div class="single-portfolio col-sm-4 all vector">
+              <div class="relative">
+                <div class="thumb">
+                  <div class="overlay overlay-bg"></div>
                   <img class="image img-fluid" src="img/p1.jpg" alt="" />
                 </div>
                 <a
@@ -182,34 +206,11 @@
                 <div class="cat">Nodejs - Api - Css</div>
                 Source code:
                 <a href="https://github.com/Farhan-Nazir/magicmirror"
-                  >magic Mirror</a
+                  >Magic Mirror</a
                 >
               </div>
             </div>
-            <div class="single-portfolio col-sm-4 all vector">
-              <div class="relative">
-                <div class="thumb">
-                  <div class="overlay overlay-bg"></div>
-                  <img class="image img-fluid" src="img/p5.jpg" alt="" />
-                </div>
-                <a
-                  href="https://farhan-nazir.github.io/Pig-Game/"
-                  class="img-pop-up"
-                >
-                  <div class="middle">
-                    <div class="text align-self-center d-flex">
-                      <img src="img/preview.png" alt="" />
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="p-inner">
-                <h4>Pig Game</h4>
-                <div class="cat">JavaScript - HTML5 - CSS3</div>
-                Source code:
-                <a href="https://github.com/Farhan-Nazir/Pig-Game">Pig Game</a>
-              </div>
-            </div>
+
             <div class="single-portfolio col-sm-4 all raster">
               <div class="relative">
                 <div class="thumb">
@@ -240,12 +241,9 @@
               <div class="relative">
                 <div class="thumb">
                   <div class="overlay overlay-bg"></div>
-                  <img class="image img-fluid" src="img/p6.jpg" alt="" />
+                  <img class="image img-fluid" src="img/p7.jpg" alt="" />
                 </div>
-                <a
-                  href="https://github.com/Farhan-Nazir/Simple-Chat-App/blob/master/ScreenShot.png"
-                  class="img-pop-up"
-                >
+                <a href="#" class="img-pop-up">
                   <div class="middle">
                     <div class="text align-self-center d-flex">
                       <img src="img/preview.png" alt="" />
@@ -254,29 +252,77 @@
                 </a>
               </div>
               <div class="p-inner">
-                <h4>Simple Chat App</h4>
-                <div class="cat">Nodejs - Socket.io</div>
+                <h4>My Resume</h4>
+                <div class="cat">Reactjs - Material-UI</div>
                 Source code:
-                <a href="https://github.com/Farhan-Nazir/Simple-Chat-App"
-                  >Simple Chat App</a
+                <a href="https://github.com/Farhan-Nazir/my-resume"
+                  >My Resume</a
                 >
               </div>
             </div>
+            <!-- New Project-->
+            <div class="single-portfolio col-sm-4 all raster">
+              <div class="relative">
+                <div class="thumb">
+                  <div class="overlay overlay-bg"></div>
+                  <img class="image img-fluid" src="img/p8.jpg" alt="" />
+                </div>
+                <a href="#" class="img-pop-up">
+                  <div class="middle">
+                    <div class="text align-self-center d-flex">
+                      <img src="img/preview.png" alt="" />
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="p-inner">
+                <h4>Pixabay Image Search Engine</h4>
+                <div class="cat">Reactjs - Pixabay API</div>
+                Source code:
+                <a href="https://github.com/Farhan-Nazir/PixabayWebapp-Reactjs"
+                  >My Resume</a
+                >
+              </div>
+            </div>
+            <!-- End Project-->
+            <!-- New Project-->
+            <div class="single-portfolio col-sm-4 all raster">
+              <div class="relative">
+                <div class="thumb">
+                  <div class="overlay overlay-bg"></div>
+                  <img class="image img-fluid" src="img/p9.jpg" alt="" />
+                </div>
+                <a href="#" class="img-pop-up">
+                  <div class="middle">
+                    <div class="text align-self-center d-flex">
+                      <img src="img/preview.png" alt="" />
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="p-inner">
+                <h4>Github Card</h4>
+                <div class="cat">Reactjs - Github API</div>
+                Source code:
+                <a href="https://github.com/Farhan-Nazir/Github-Card"
+                  >My Resume</a
+                >
+              </div>
+            </div>
+            <!-- End Project-->
           </div>
         </div>
       </div>
     </section>
     <!-- End portfolio-area Area -->
 
-    <p class="footer-text">
-      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>
-        document.write(new Date().getFullYear());
-      </script>
-      All rights reserved | This template is made with
-      <i class="fa fa-heart-o" aria-hidden="true"></i> by
-      <a href="https://colorlib.com" target="_blank">Farhan</a>
-      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    </p>
+    <div align="center">
+      <p class="footer-text">
+        Copyright &copy;<script>
+          document.write(new Date().getFullYear());
+        </script>
+        All rights reserved | Farhan Nazir
+      </p>
+    </div>
   </body>
 </html>
