--- a/index.html
+++ b/index.html
@@ -62,16 +62,14 @@
       </div>
     </section>
     <!-- End banner Area -->
+    <br />
+    <br />
     <div align="center">
       <p class="footer-text">
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         Copyright &copy;<script>
           document.write(new Date().getFullYear());
         </script>
-        All rights reserved | This template is made with
-        <i class="fa fa-heart-o" aria-hidden="true"></i> by
-        <a href="https://colorlib.com" target="_blank">Farhan</a>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        All rights reserved | Farhan Nazir
       </p>
     </div>
   </body>
