--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/fav.png" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <!-- Author Meta -->
     <meta name="author" content="Farhan-Nazir" />
     <!-- Meta Description -->
@@ -46,7 +46,6 @@
               <li><a href="portfolio.html">Portfolio</a></li>
 
               <li class="active"><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
           <!-- #nav-menu-container -->
@@ -63,11 +62,6 @@
             <h1 class="text-white">
               About Me
             </h1>
-            <p class="text-white link-nav">
-              <a href="index.html">Home </a>
-              <span class="lnr lnr-arrow-right"></span>
-              <a href="about.html"> About Me</a>
-            </p>
           </div>
         </div>
       </div>
@@ -79,69 +73,103 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 col-md-6 home-about-left">
-            <img class="img-fluid" src="img/about-img.png" alt="" />
+            <img class="img-fluid" src="img/hero-img.png" alt="" />
           </div>
           <div class="col-lg-5 col-md-6 home-about-right">
             <h6>About Me</h6>
             <h1 class="text-uppercase">Personal Details</h1>
             <p>
-              Here, I focus on a range of items and features that we use in life
-              without giving them a second thought. such as Coca Cola. Dolor sit
-              amet, consectetur adipisicing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco.
+              I am a very positive person who had always easy ways to find new
+              ideas for solutions and always do my job with the utmost care. I
+              often hear that my enthusiasm is infectious and contributes to a
+              better mood and work for our department. Moreover, I have
+              brilliant communication and interpersonal skills that I have
+              acquired through my past experiences along with effective
+              presentation skills.
             </p>
-            <a href="#" class="primary-btn text-uppercase">View Full Details</a>
           </div>
           <div class="col-lg-12 pt-60">
             <p>
-              It won’t be a bigger problem to find one video game lover in your
-              neighbor. Since the introduction of Virtual Game, it has been
-              achieving great heights so far as its popularity and technological
-              advancement are concerned. The history of video game is as
-              interesting as a fairy tale.
+              Being a motivated individual and having the willingness to learn
+              new things, I make sure that by the time I am selected I have
+              enough knowledge that would help in benefiting the company.
             </p>
-            <p>
-              The quality of today’s video game was not at all there when video
-              game first conceptualized and played ever. During the formulative
-              years, video games were created by using various interactive
-              electronic devices with various display formats. The first ever
-              video game was designed in 1947 by Thomas T. Goldsmith Jr.
-            </p>
-            <h4 class="pt-30">Tools Expertness</h4>
+            <h4 class="pt-30">Programming Skill</h4>
           </div>
         </div>
         <div class="row skillbar-wraps">
           <div class="col-lg-6 skill-left">
             <div class="single-skill">
               <p>
-                After Effects 85%
+                Javascript
               </p>
-              <div class="skill" data-width="85"></div>
+              <div class="skill" data-width="80"></div>
             </div>
             <div class="single-skill">
               <p>
-                Photoshop 90%
+                Nodejs
               </p>
-              <div class="skill" data-width="90"></div>
+              <div class="skill" data-width="55"></div>
             </div>
             <div class="single-skill">
               <p>
-                Illustrator 70%
+                Reactjs
               </p>
-              <div class="skill" data-width="70"></div>
+              <div class="skill" data-width="45"></div>
+            </div>
+            <div class="single-skill">
+              <p>
+                C#
+              </p>
+              <div class="skill" data-width="30"></div>
+            </div>
+            <div class="single-skill">
+              <p>
+                Java
+              </p>
+              <div class="skill" data-width="35"></div>
+            </div>
+            <div class="single-skill">
+              <p>
+                Python
+              </p>
+              <div class="skill" data-width="45"></div>
             </div>
           </div>
           <div class="col-lg-6 skill-right">
             <div class="single-skill">
               <p>
-                Sublime 95%
+                Web Developement
               </p>
-              <div class="skill" data-width="95"></div>
+              <div class="skill" data-width="85"></div>
             </div>
             <div class="single-skill">
               <p>
-                Sketch 85%
+                HTML5
+              </p>
+              <div class="skill" data-width="80"></div>
+            </div>
+            <div class="single-skill">
+              <p>
+                CSS3
+              </p>
+              <div class="skill" data-width="35"></div>
+            </div>
+            <div class="single-skill">
+              <p>
+                MYSQL
+              </p>
+              <div class="skill" data-width="75"></div>
+            </div>
+            <div class="single-skill">
+              <p>
+                MongoDB
+              </p>
+              <div class="skill" data-width="65"></div>
+            </div>
+            <div class="single-skill">
+              <p>
+                Git
               </p>
               <div class="skill" data-width="85"></div>
             </div>
@@ -165,54 +193,57 @@
         <li>
           <div class="content">
             <h4>
-              <time>Masters in Graphics & Fine Arts</time>
+              <time>Full-Stack Developer • Malmo </time>
             </h4>
-            <p><b>Session:</b> 2010-11</p>
-            <p><b>Result:</b> 3.78 (In the Scale of 4.00)</p>
-          </div>
-        </li>
-        <li>
-          <div class="content">
-            <img
-              class="img-fluid mx-auto d-block mb-30"
-              src="img/about/c-logo.png"
-              alt=""
-            />
-            <h4>
-              <time>Creative Content Developer</time>
-            </h4>
-            <p>July 2015 to Present</p>
+            <p><b>Session:</b> 2018 - 2019</p>
+            <p>
+              <b>Description:</b> 6 months intensive full stack web development
+              course. • HTML5• CSS3• JavaScript ES6• Nodejs •MySQL • MongoDB •
+              Reactjs
+            </p>
           </div>
         </li>
         <li>
           <div class="content">
             <h4>
-              <time>Bachelor in Graphics & UI/UX</time>
+              <time>SOFTWARE DEVELOPMENT • IT-HÖGSKOLA GOTHENBURG</time>
             </h4>
-            <p><b>Session:</b> 2006-09</p>
-            <p><b>Result:</b> 3.40 (In the Scale of 4.00)</p>
-          </div>
-        </li>
-        <li>
-          <div class="content">
-            <img
-              class="img-fluid mx-auto d-block mb-30"
-              src="img/about/c-logo.png"
-              alt=""
-            />
-            <h4>
-              <time>Senior UI/UX Designer</time>
-            </h4>
-            <p>July 2015 to Present</p>
+            <p><b>Session:</b> 2016 - 2017</p>
+            <p>
+              <b>Description:</b> Gained basic knowledge in Java programming
+              whereas created software for cross-platform as a project.
+            </p>
           </div>
         </li>
         <li>
           <div class="content">
             <h4>
-              <time>Diploma in Fine Arts & Printing</time>
+              <time>SOFTWARE &WEB DEVELOPMENT • DISTANCE EDUCATION</time>
             </h4>
-            <p><b>Session:</b> 2003-06</p>
-            <p><b>Result:</b> 4.94 (In the Scale of 5.00)</p>
+            <p><b>Session:</b> 2015 - 2018</p>
+            <p>
+              <b>Description:</b> Practiced and still learning new technologies
+              for Software & Web Development such as Reactjs, Angular, Nodejs,
+              JavaScript, MySQL, Firebase, NoSQL, C#, .Net, Python.
+            </p>
+          </div>
+        </li>
+        <li>
+          <div class="content">
+            <h4>
+              <time>WEB DEVELOPMENT • DISTANCE EDUCATION</time>
+            </h4>
+            <p><b>Session:</b> 2010 - 2012</p>
+            <p><b>Description:</b> Advance course of JS</p>
+          </div>
+        </li>
+        <li>
+          <div class="content">
+            <h4>
+              <time>Web Design & Development</time>
+            </h4>
+            <p><b>Session:</b> 2002 - 2003</p>
+            <p><b>Description:</b> 6-months course of HTML, CSS & JS</p>
           </div>
         </li>
       </ul>
@@ -220,83 +251,25 @@
 
     <!-- End timeline Area -->
 
-    <!-- Start testimonial Area -->
-    <section class="testimonial-area section-gap">
+    <!-- start banner Area -->
+    <section class="relative about-banner">
+      <div class="overlay overlay-bg"></div>
       <div class="container">
-        <div class="row d-flex justify-content-center">
-          <div class="menu-content pb-70 col-lg-8">
-            <div class="title text-center">
-              <h1 class="mb-10">Client’s Feedback About Me</h1>
-              <p>
-                It is very easy to start smoking but it is an uphill task to
-                quit it. Ask any chain smoker or even a person.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="active-testimonial">
-            <div class="single-testimonial item d-flex flex-row">
-              <div class="thumb">
-                <img class="img-fluid" src="img/elements/user1.png" alt="" />
-              </div>
-              <div class="desc">
-                <p>
-                  Do you want to be even more successful? Learn to love learning
-                  and growth. The more effort you put into improving your
-                  skills, the bigger the payoff you.
-                </p>
-                <h4>Harriet Maxwell</h4>
-                <p>CEO at Google</p>
-              </div>
-            </div>
-            <div class="single-testimonial item d-flex flex-row">
-              <div class="thumb">
-                <img class="img-fluid" src="img/elements/user2.png" alt="" />
-              </div>
-              <div class="desc">
-                <p>
-                  A purpose is the eternal condition for success. Every former
-                  smoker can tell you just how hard it is to stop smoking
-                  cigarettes. However.
-                </p>
-                <h4>Carolyn Craig</h4>
-                <p>CEO at Facebook</p>
-              </div>
+        <div class="row d-flex align-items-center justify-content-center">
+          <div class="about-content col-lg-12">
+            <h2 class="text-white">
+              Contact Info
+            </h2>
+            <div class="contact-details">
+              <h5 class="text-white">Malmö, Sweden</h5>
+              <h5 class="text-white">+46 76 26 26 517</h5>
+              <h5 class="text-white">nazirf3440@gmail.com</h5>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- End testimonial Area -->
-
-    <!-- Start brands Area -->
-    <section class="brands-area">
-      <div class="container">
-        <div class="brand-wrap">
-          <div
-            class="row align-items-center active-brand-carusel justify-content-start no-gutters"
-          >
-            <div class="col single-brand">
-              <a href="#"><img class="mx-auto" src="img/l1.png" alt=""/></a>
-            </div>
-            <div class="col single-brand">
-              <a href="#"><img class="mx-auto" src="img/l2.png" alt=""/></a>
-            </div>
-            <div class="col single-brand">
-              <a href="#"><img class="mx-auto" src="img/l3.png" alt=""/></a>
-            </div>
-            <div class="col single-brand">
-              <a href="#"><img class="mx-auto" src="img/l4.png" alt=""/></a>
-            </div>
-            <div class="col single-brand">
-              <a href="#"><img class="mx-auto" src="img/l5.png" alt=""/></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End brands Area -->
+    <!-- End banner Area -->
 
     <!-- start footer Area -->
     <div align="center">
