--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/fav.png" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <!-- Author Meta -->
     <meta name="author" content="Farhan-Nazir" />
     <!-- Meta Description -->
@@ -43,7 +43,7 @@
             <p>
               Skilled Full Stack Developer who excels at multiple juggling tasks
               while working under pressure.Want to gain experience in
-              Technologiesand Product development environments whereI can
+              Technologies and Product development environments whereI can
               utilize my potential to its peak and quench my thirst for
               knowledge and Experience.
             </p>
