--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/fav.png" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <!-- Author Meta -->
     <meta name="author" content="Farhan-Nazir" />
     <!-- Meta Description -->
@@ -46,7 +46,6 @@
               <li><a href="portfolio.html">Portfolio</a></li>
 
               <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
           <!-- #nav-menu-container -->
@@ -60,7 +59,7 @@
         <div class="row d-flex align-items-center justify-content-center">
           <div class="about-content col-lg-12">
             <h1 class="text-white">
-              My Porjects
+              My Portfolio
             </h1>
           </div>
         </div>
@@ -149,7 +148,7 @@
                 </a>
               </div>
               <div class="p-inner">
-                <h4>Order.No Display webapp for Resturants</h4>
+                <h4>Order.No Display webapp for Restaurants</h4>
                 <div class="cat">Reactjs</div>
                 <div class="cat">
                   Source code:
@@ -179,7 +178,7 @@
                 <div class="cat">
                   Source code:
                   <a href="https://github.com/Farhan-Nazir/Accounts"
-                    >Order Display</a
+                    >Accounts List</a
                   >
                 </div>
               </div>
@@ -280,7 +279,7 @@
                 <div class="cat">Reactjs - Pixabay API</div>
                 Source code:
                 <a href="https://github.com/Farhan-Nazir/PixabayWebapp-Reactjs"
-                  >My Resume</a
+                  >Pixabay Image Search Engine</a
                 >
               </div>
             </div>
@@ -305,7 +304,7 @@
                 <div class="cat">Reactjs - Github API</div>
                 Source code:
                 <a href="https://github.com/Farhan-Nazir/Github-Card"
-                  >My Resume</a
+                  >Github Card</a
                 >
               </div>
             </div>
