--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     <section class="about-banner">
       <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
-          <div class="about-content col-lg-12">
+          <div class="about-content col-sm-6">
             <h1 class="text-white">
               About Me
             </h1>
@@ -73,10 +73,9 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 col-md-6 home-about-left">
-            <img class="img-fluid" src="img/hero-img.png" alt="" />
+            <img class="img-fluid" src="img/about-me.png" alt="" />
           </div>
           <div class="col-lg-5 col-md-6 home-about-right">
-            <h6>About Me</h6>
             <h1 class="text-uppercase">Personal Details</h1>
             <p>
               I am a very positive person who had always easy ways to find new
@@ -88,7 +87,7 @@
               presentation skills.
             </p>
           </div>
-          <div class="col-lg-12 pt-60">
+          <div class="col-lg-12 pt-40">
             <p>
               Being a motivated individual and having the willingness to learn
               new things, I make sure that by the time I am selected I have
