--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       <div class="container">
         <div class="row fullscreen align-items-center justify-content-between">
           <div class="col-lg-6 col-md-6 banner-left">
-            <h6>This is me</h6>
             <h1>Farhan Nazir</h1>
             <p>
               Skilled Full Stack Developer who excels at multiple juggling tasks
@@ -56,21 +55,12 @@
             </a>
           </div>
           <div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
-            <img class="img-fluid" src="img/hero-img.png" alt="" />
+            <img class="img-fluid" src="img/about-me.png" alt="" />
           </div>
         </div>
       </div>
     </section>
     <!-- End banner Area -->
-    <br />
-    <br />
-    <div align="center">
-      <p class="footer-text">
-        Copyright &copy;<script>
-          document.write(new Date().getFullYear());
-        </script>
-        All rights reserved | Farhan Nazir
-      </p>
-    </div>
+  
   </body>
 </html>
